auto generate sider

--- a/docs/技术栈/Go/自动化测试与爬虫.md
+++ b/docs/技术栈/Go/自动化测试与爬虫.md
@@ -1,3 +1,7 @@
+---
+order: 10
+---
+
 # 自动化测试与爬虫
 自动化测试一般分为**接口自动化**和**ui自动化**。
 接口测试一般校验的是客户端与服务端交互的部分，校验业务逻辑以及服务端返回的数据。而ui自动化也就是ui测试则是站在**用户的角度**上通过对ui界面元素得操作来验证系统的功能。
